--- a/flask_app/templates/header.html
+++ b/flask_app/templates/header.html
@@ -16,6 +16,11 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('movies.about') }}">
+                    About
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('users.account') }}">
                     Account
                 </a>
